# python-wikipedia-commandline

./: .flake8  .gitignore  README.md  noxfile.py  pyproject.toml
src/python_wikipedia_commandline/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
