[tool.poetry]
name = "python-wikipedia-commandline"
version = "0.1.0"
description = "View wikipedia entries via the commandline"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JohnIrle/python-wikipedia-commandline"
repository = "https://github.com/JohnIrle/python-wikipedia-commandline"
authors = ["JohnIrle <irlejohn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
