[tool.poetry]
name = "python-wikipedia-commandline"
version = "0.1.0"
description = "View wikipedia entries via the commandline"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JohnIrle/python-wikipedia-commandline"
repository = "https://github.com/JohnIrle/python-wikipedia-commandline"
authors = ["JohnIrle <irlejohn@gmail.com>"]

[tool.poetry.scripts]
commandline-wikipedia = "python_wikipedia_commandline.console:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
