[tool.poetry]
name = "python-wikipedia-commandline"
version = "0.1.0"
description = "View wikipedia entries via the commandline"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JohnIrle/python-wikipedia-commandline"
repository = "https://github.com/JohnIrle/python-wikipedia-commandline"
authors = ["JohnIrle <irlejohn@gmail.com>"]

[tool.poetry.scripts]
commandline-wikipedia = "python_wikipedia_commandline.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["python_wikipedia_commandline"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.0.1"}
pytest-cov = "^2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
